manifest/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (a9d05d509)
  labels:
    io.kompose.service: mariadb
  name: mariadb
  namespace: homolog

spec:
  replicas: 1

  selector:
    matchLabels:
      io.kompose.service: mariadb

  strategy:
    type: Recreate

  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (a9d05d509)
      labels:
        io.kompose.service: mariadb

    spec:
      containers:
        - name: mariadb
          image: mariadb:latest

          ports:
            - containerPort: 3306

          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql

      restartPolicy: Always

      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
